--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ title: PhysiKon 2019
   <p class="lead" markdown="1">
     Am 11. April 2019 findet organisiert von PeP et al. eine Jobmesse für Physiker*innen statt
     <ul class="lead">
-      <li>Unternehmen aus der Umgebung stellen sich vor und dich ein</li>
-      <li>Das ganze Spektrum der Jobs für Physiker*innen</li>
-      <li>An einem Tag unter einem Dach</li>
+      <li>Unternehmen aus der Umgebung stellen sich vor und dich ein
+      <li>Das ganze Spektrum der Jobs für Physiker*innen
+      <li>An einem Tag unter einem Dach
     </ul>
   </p>
 </header>
@@ -22,7 +22,7 @@ title: PhysiKon 2019
     <div class="col-12 mb-3">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Unternehmen</h5> 
+          <h5 class="card-title">Unternehmen</h5>
           <p>
           Wir freuen uns, das wir folgende Unternehmen gewinnen konnten:
 
@@ -30,46 +30,47 @@ title: PhysiKon 2019
           <a href="https://point-8.de">
             <img src="https://point-8.de/static/img/point8.png" height="50px" alt="point8">
           </a>
-          
+
           <center>
             Ihr Unternehmen ist noch nicht dabei und Sie würden gerne teilnehmen?<br>
             Hier gibt es weitere <a href="/exhibitors.html">Informationen</a>.
           </center>
-        </div> 
+        </div>
       </div>
-    </div> 
+    </div>
 
     <div class="col-12 col-lg-6 mb-3">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Location</h5> 
+          <h5 class="card-title">Location</h5>
           Direkt an der S-Bahn Station gelegen, ist der Campus-Treff der perfekte
           Ort um an vielen Ständen ins Gespräch zu kommen.
-        </div> 
+        </div>
         <img class="card-img-bottom" src="img/campus-treff.jpg" alt="campus-treff">
       </div>
-    </div> 
+    </div>
 
     <div class="col-12 col-lg-6 mb-3">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Organisation</h5> 
+          <h5 class="card-title">Organisation</h5>
 
           <p> Organisiert wird die Physikon von PeP et. al., dem Alumniverein der Physik.
 
           <p> Eines der Hauptziele von PeP ist es, den Kontakt zwischen Alumni, Wirtschaft
           und Studierenden zu fördern und die PhysiKon ist die ideale Gelegenheit dazu.
 
-          <p>Ansprechpartner in für die PhysiKon sind Henning Moldenhauer und Lena Linhoff,
+          <p> Ansprechpartner in für die PhysiKon sind Henning Moldenhauer und Lena Linhoff,
           Kontakt unter <a href="mailto:physikon@pep-dortmund.org">physikon@pep-dortmund.org</a>.
-          
 
-        </div> 
+          <p> Weitere Informationen zu PeP et al. findet ihr auf unserer
+            <a href="https://pep-dortmund.org">Homepage</a>
+        </div>
         <div align="center" class="mb-1">
           <img style="max-width: 300px;" class="card-img-bottom" src="img/pep.svg" alt="<unternehmen>">
         </div>
       </div>
-    </div> 
+    </div>
 
   </div>
 
