--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ title: PhysiKon 2019
           <p> Eines der Hauptziele von PeP ist es, den Kontakt zwischen Alumni, Wirtschaft
           und Studierenden zu fördern und die PhysiKon ist die ideale Gelegenheit dazu.
 
-          <p> Ansprechpartner in für die PhysiKon sind Henning Moldenhauer und Lena Linhoff,
+          <p> Ansprechpartner für die PhysiKon sind Henning Moldenhauer und Lena Linhoff,
           Kontakt unter <a href="mailto:physikon@pep-dortmund.org">physikon@pep-dortmund.org</a>.
 
           <p> Weitere Informationen zu PeP et al. findet ihr auf unserer
