fix typo "das" -> "dass"

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ title: PhysiKon 2019
         <div class="card-body">
           <h5 class="card-title">Unternehmen</h5>
           <p>
-          Wir freuen uns, das wir folgende Unternehmen gewinnen konnten:
+          Wir freuen uns, dass wir folgende Unternehmen gewinnen konnten:
 
           <p>
           <a href="https://point-8.de">
