--- a/exhibitors.html
+++ b/exhibitors.html
@@ -1,7 +1,8 @@
 ---
-layout: default
+layout: exhibitors_layout
 ---
 
+<div class="card-body-new">
 <header class="container">
   <h1>Möchten Sie Physiker*innen für Ihr Unternehmen gewinnen?</h1>
   <p class="lead">
@@ -54,4 +55,5 @@ layout: default
   Wir beantworten Ihnen gerne Ihre Fragen
   und nehmen Ihre Anmeldung zur Messe gerne entgegen.
 
+</div>
 </main>
