--- a/index.html
+++ b/index.html
@@ -27,9 +27,18 @@ title: PhysiKon 2019
           Wir freuen uns, dass wir folgende Unternehmen gewinnen konnten:
 
           <p>
-          <a href="https://point-8.de">
-            <img src="https://point-8.de/static/img/point8.png" height="50px" alt="point8">
+          <a class="company" href="https://point-8.de">
+            <img src="https://point-8.de/static/img/point8.png" alt="point8">
           </a>
+
+          <a class="company" href="https://mitnorm.de">
+            <img src="img/logos/mitnorm.svg" alt="mitNorm">
+          </a>
+
+          <!-- <a class="company" href="https://hella.com"> -->
+          <!--   <img src="https://upload.wikimedia.org/wikipedia/commons/3/38/Hella-logo.svg" alt="HELLA"> -->
+          <!-- </a> -->
+
 
           <center>
             Ihr Unternehmen ist noch nicht dabei und Sie würden gerne teilnehmen?<br>
