changed from png to svg

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ title: PhysiKon 2019
 
           <p>
           <a class="company" href="https://point-8.de">
-            <img src="https://point-8.de/static/img/point8.png" alt="point8">
+            <img src="img/logos/point8.svg" alt="point8">
           </a>
 
           <a class="company" href="https://mitnorm.de">
