--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ title: PhysiKon 2019
             <img src="img/logos/mitnorm.svg" alt="mitNorm">
           </a>
 
-          <a class="company" href="https://hella.com"> -->
-            <img src="img/logos/hella.png" alt="HELLA"> -->
+          <a class="company" href="https://hella.com">
+            <img src="img/logos/hella.png" alt="HELLA">
           </a>
 
 
