--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@ title: PhysiKon 2019
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Location</h5>
-          Direkt an der S-Bahn Station gelegen, ist der Campus-Treff der perfekte
-          Ort um an vielen Ständen ins Gespräch zu kommen.
+          Direkt an der S-Bahn Station (Dortmund Universität) gelegen, befindet sich der "Campus-Treff".
+          Der großzügige und helle Konferenzsaal bietet genügend Fläche, um Ihr Unternehmen zu präsentieren und
+          mit Besuchern ins Gespräch zu kommen.
         </div>
         <img class="card-img-bottom" src="img/campus-treff.jpg" alt="campus-treff">
       </div>
