add zeb Logo und ein bisschen mehr Text

--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 ---
 layout: default
-title: PhysiKon 2019
+title: PhysiKon 2019 an der TU Dortmund
 ---
 
 <header class="container">
   <h1>{{ page.title }}</h1>
   <p class="lead" markdown="1">
-    Am 11. April 2019 findet organisiert von PeP et al. eine Jobmesse für Physiker*innen statt
+
+
     <ul class="lead">
       <li>Unternehmen aus der Umgebung stellen sich vor und dich ein
-      <li>Das ganze Spektrum der Jobs für Physiker*innen
+      <li>Das ganze Spektrum der Jobs für Physiker/innen
       <li>An einem Tag unter einem Dach
     </ul>
+
+    Am <b>11. April 2019</b> veranstaltet PeP et al. die erste Jobmesse für Physiker/innen an der TU Dortmund. <br>
+    Du bist auf der Suche nach einem Job nach dem Studium, einem Praktikum oder Werkstudentenjob? <br>
+    Oder du möchtest dich einfach mal informieren, was du mit einem Physik-Studium alles anfangen kannst?<br>
+    Dann komm vorbei! <br>
+    Du bist auf dem Weg Elektrotechniker/in, Informatiker/in oder Ingenieur/in zu werden? <br>
+    Macht nichts, alle Unternehmen freuen sich über Messebesucher aus den Nachbar-Fakultäten!<br>
+
   </p>
 </header>
 
@@ -37,6 +46,10 @@ title: PhysiKon 2019
 
           <a class="company" href="https://www.hella.com">
             <img src="img/logos/hella.png" alt="HELLA">
+          </a>
+
+          <a class="company" href="https://www.zeb.de/">
+            <img src="img/logos/zeb_Logo_CMYK.png" alt="zeb">
           </a>
 
 
