--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@ title: PhysiKon 2019 an der TU Dortmund
           <a class="company" href="https://point-8.de">
             <img src="img/logos/point8.svg" alt="point8">
           </a>
+          
+          <a class="company" href="https://www.scisys.de">
+            <img src="img/logos/SCISYS.jpg" alt="scisys">
+          </a>
 
           <a class="company" href="https://www.zeb.de/">
             <img src="img/logos/zeb_Logo_CMYK.png" alt="zeb">
