add logo rapidminer + scisys (noch auskommentiert!) (#21)
* add logo rapidminer + scisys (noch auskommentiert!)

* add scisys from another branch

* rapidminer richtig sortiert vong ABC her

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ title: PhysiKon 2019 an der TU Dortmund
           <a class="company" href="https://www.hella.com">
             <img src="img/logos/hella.png" alt="HELLA">
           </a>
-            
+
           <a class="company" href="https://mitnorm.de">
             <img src="img/logos/mitnorm.svg" alt="mitNorm">
           </a>
@@ -47,7 +47,11 @@ title: PhysiKon 2019 an der TU Dortmund
           <a class="company" href="https://point-8.de">
             <img src="img/logos/point8.svg" alt="point8">
           </a>
-          
+
+          <a class="company" href="https://rapidminer.com">
+            <img src="img/logos/rapidminer.png" alt="rapidminer">
+          </a>
+
           <a class="company" href="https://www.scisys.de">
             <img src="img/logos/SCISYS.jpg" alt="scisys">
           </a>
@@ -55,6 +59,7 @@ title: PhysiKon 2019 an der TU Dortmund
           <a class="company" href="https://www.zeb.de/">
             <img src="img/logos/zeb_Logo_CMYK.png" alt="zeb">
           </a>
+
 
           <center>
             Ihr Unternehmen ist noch nicht dabei und Sie würden gerne teilnehmen?<br>
