Cohaus und florack (#23)
* cohausz und florack logo added

* Logo added to website

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@ title: PhysiKon 2019 an der TU Dortmund
           Wir freuen uns, dass wir folgende Unternehmen gewinnen konnten:
 
           <p>
+          <a class="company" href="https://www.cohausz-florack.de">
+            <img src="img/logos/C&F.jpg" alt="Cohausz&Florack">
+          </a>
+            
           <a class="company" href="https://www.hella.com">
             <img src="img/logos/hella.png" alt="HELLA">
           </a>
