Update hella logo (#24)
* update hella logo

* Update index.html

* Delete hella.png

* fix whitespace

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ title: PhysiKon 2019 an der TU Dortmund
           </a>
             
           <a class="company" href="https://www.hella.com">
-            <img src="img/logos/hella.png" alt="HELLA">
+            <img src="img/logos/hella.svg" alt="HELLA">
           </a>
 
           <a class="company" href="https://mitnorm.de">
